# hpsint

./: .clang-format  .gitignore  CMakeLists.txt  README.MD  allen_cahn.cc  allen_cahn_impl.cc  allen_cahn_impl_two_components.cc  allen_cahn_two_components_1.cc  allen_cahn_two_components_2.cc  cahn_hilliard.cc  cahn_hilliard_impl.cc  inst.cc  newton_test.cc  sintering_circle.cc  sintering_cloud.cc  sintering_impl.cc
applications/grand_potential/: CMakeLists.txt  kks.cc  kks2.cc  kks_helpers.h
applications/sintering/: CMakeLists.txt  grain_growth.cc  grain_tracker_throughput.cc  grand_potential_greenquist.cc  inst.cc  sintering.cc  sintering_circle.cc  sintering_cloud.cc  sintering_generic.cc  sintering_print_particles.cc  sintering_throughput.cc
applications/sintering/analysis_examples/: 2d_titanium.json  2particles_pbc.json  2particles_pbc.prm  3d_default.json  49particles.json  49particles.prm  49particles_delta_min_05.json  49particles_delta_min_10.json  49particles_delta_min_20.json  49particles_delta_min_30.json  49particles_delta_min_40.json  49particles_delta_min_40_coarse.json  49particles_delta_min_40_ultimate.json  49particles_delta_min_40_wang.json  49particles_delta_min_50.json  49particles_delta_min_50_coarse.json  49particles_iso.json  5particles.json  README.MD  coupled_wang_studies_0.json  coupled_wang_studies_1.json  coupled_wang_studies_2.json  debug.json  default.json  default.prm  grand_potential_greenquist.json  no_advection.json  termuhlen.json  wang_coupled_advection.json  wang_generic_advection.json
applications/sintering/batch_runs/: batch_example_via_cmd.json  batch_example_via_file.json  jobs_submitter.py  run_batch.py  template.job
applications/sintering/batches_examples/: batch_via_file.json  template.job
applications/sintering/cmake/: sintering.cmake
applications/sintering/performance_experiments/: compare_preconditioners.py  compare_preconditioners_bf.cmd
applications/sintering/scripts/: batch.py  build_tex_packings.py  centrify_packing.py  check_particle_connectivity.py  contacts.py  copy_results.py  densification_analysis.py  distribution_analysis.py  extract_subpacking.py  library.py  make_animated_distribution.py  make_animated_plot.py  packing_properties.py  paraview_2particles.py  paraview_draw_packings.py  paraview_grain_contours_tex.py  paraview_plot_contours_of_particles.py  paraview_shrinkage.py  plot_data.py  plot_distribution_history.py  postproc_shrinkage.py  print_basic_clouds.py  track_grain_data.py  transform_packing.py
applications/sintering/scripts_performance/: README.MD  configurations.py  configurations.sh  preconditioners.py  preconditioners.sh  scaling.py
applications/sintering/scripts_throughput/: README.MD
applications/sintering/sintering_cloud_examples/: 1089particles.cloud  108particles.cloud  10particles.cloud  10particles_no_overlap.cloud  186particles.cloud  20particles_no_overlap.cloud  290particles.cloud  2particles_overlap_inclined.cloud  2particles_pbc.cloud  3particles_overlap.cloud  40particles_no_overlap.cloud  49particles.cloud  5particles.cloud  5particles_no_overlap.cloud  608particles.cloud
applications/sintering/src/: csv_reader.cc  postprocessors.cc  tools.cc
applications/structural/: CMakeLists.txt  clamped_bar.cc
applications/structural/include/: CMakeLists.txt
benchmarks/: CMakeLists.txt  README.MD  fe_values_vs_fe_eval.cc  layer_wise.likwid.cc  layer_wise_00.json  layer_wise_01.json  layer_wise_02.json  layer_wise_03.json  operators.h
include/: CMakeLists.txt  csv_reader.h  newton.h
include/pf-applications/: newton.h  preconditioners.h  solvers_linear.h  solvers_nonlinear.h  vector_tools.h
include/pf-applications/base/: data.h  debug.h  fe_integrator.h  geometry.h  input.h  mask.h  memory_consumption.h  output.h  performance.h  revision.h.in  scoped_name.h  solution_serialization.h  tensor.h  timer.h
include/pf-applications/dofs/: dof_tools.h
include/pf-applications/grain_tracker/: cell.h  cloud.h  distributed_stitching.h  ellipsoid.h  elliptical_helpers.h  grain.h  mapper.h  motion.h  output.h  periodicity_graph.h  remap_graph.h  remapping.h  representation.h  segment.h  tracker.h  tracking.h
include/pf-applications/grid/: bounding_box_filter.h  constraint_helper.h  grid_tools.h
include/pf-applications/lac/: dynamic_block_vector.h  evaluation.h  jacobian_operator.h  newton.h  preconditioners.h  residual_traits.h  residual_wrapper.h  solvers_linear.h  solvers_linear_parameters.h  solvers_linear_tools.h  solvers_nonlinear.h  solvers_nonlinear_parameters.h  solvers_nonlinear_snes.h
include/pf-applications/matrix_free/: output.h  tensor_product_kernels.h  tools.h
include/pf-applications/numerics/: data_out.h  functions.h  output.h  phasefield_tools.h  power_helper.h  vector_tools.h
tests/: CMakeLists.txt  adjust_divisions.cc  adjust_divisions.output  advection_mechanism_data.cc  advection_mechanism_data.output  clamped_bar_via_coupled.cc  clamped_bar_via_coupled.mpirun=1.output  complex_microstructure.cc  complex_microstructure.mpirun=4.output  dbv_block_operations.cc  dbv_block_operations.output  distributed_distances.cc  distributed_distances.mpirun=4.output  distributed_stiching.cc  distributed_stiching.h  distributed_stiching_01.cc  distributed_stiching_02.cc  distributed_stitching_01.cc  distributed_stitching_01.mpirun=4.output  distributed_stitching_02.cc  distributed_stitching_02.mpirun=4.output  dummy.cc  dummy.mpirun=1.output  ellipses_distance_2d.cc  ellipses_distance_2d.output  ellipses_distance_2d_01.cc  ellipses_distance_2d_01.output  ellipses_distance_2d_02.cc  ellipses_distance_2d_02.output  ellipses_distance_3d.cc  ellipses_distance_3d.output  ellipses_distance_3d_01.cc  ellipses_distance_3d_01.output  ellipses_distance_3d_02.cc  ellipses_distance_3d_02.output  ellipsoid_properties_01.cc  ellipsoid_properties_01.output  ellipsoid_properties_02.cc  ellipsoid_properties_02.output  free_energy_sintering.cc  (+146 more)
tests/include/: CMakeLists.txt  mesh_tester.h  residual_tester.h  sintering_model.h  tangent_tester.h
tests/src/: runner_sintering_models.cc
(+114 files in other folders)
